--- a/src/app/pages/sidemenu/e-card/e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/e-card.page.html
@@ -13,14 +13,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content  *ngIf="loaded" >
   <ion-list  >
     <ion-card>
       <ion-card-header>
         <ion-avatar>
           <div>
             <!-- <img [src]="userProfile.user.ProfileImage" onError="this.src='assets/icons/business/anonymous.svg'" /> -->
-            <img src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}" style="width: 100%; height:100%; object-fit: cover;"
+            <img src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}"style="width: 100%; height:100%; object-fit: cover;"
             onError="this.src='assets/icons/business/anonymous.svg'" onError="this.src='assets/icons/business/anonymous.svg'" />
           </div>
         </ion-avatar>
@@ -35,7 +35,7 @@
       </ion-card-header>
       <ion-card-content>
         <h1>{{eCard.Name}}</h1>
-        <h2 style="font-weight: bold; margin: -7px; margin-right: 1px;">{{eCard.Name}} 123</h2>
+        <h2 style="font-weight: bold; margin: -7px; margin-right: 1px;">{{userCanvasProfile.canvasProfile.UserName}}</h2>
         <!-- <h3>{{userProfile.user.DisplayName}}</h3>
         <h5>{{userProfile.user.About}}</h5> -->
       </ion-card-content>
@@ -79,15 +79,12 @@
         <h3>{{eCard.Website}}</h3>
          <!-- <h3>www.finitee.com</h3> -->
       </ion-item>
-      <ion-item >
-        <ion-text>LinkedIn</ion-text>
-        <h3>{{eCard.CustomFields['LinkedIn']}}</h3>
-         <!-- <h3>www.Linkedin.com</h3> -->
-      </ion-item>
-      <!-- <ion-item >
-        <ion-text></ion-text>
-        <h3>{{userProfile.user.LinkedIn}}</h3>
-      </ion-item> -->
+      <ng-container *ngFor="let row of dynamicRows">
+        <ion-item>
+          <ion-text>{{ row.field }}</ion-text>
+          <h3>{{ row.value }}</h3>
+        </ion-item>
+      </ng-container>
       
 
   </ion-list>
