--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
@@ -22,7 +22,7 @@
   .movable-image {
     cursor: grab; /* Cursor changes to grab */
     // transform: translate(-50%, -50%);
-    transition: transform 0.2s ease; /* Smooth transition for zoom */
+    //transition: transform 0.2s ease; /* Smooth transition for zoom */
     // width: 100%;
     // height: 100%;
     // object-fit: cover; /* Or use contain based on your needs */
