--- a/src/app/pages/sidemenu/e-card/e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/e-card.page.html
@@ -39,7 +39,7 @@
         <h5>{{userProfile.user.About}}</h5> -->
       </ion-card-content>
     </ion-card>
-    <ion-icons>
+    <ion-icons style="border: 2px #03A9F5;">
       <div class="icons-container">
         <div class="icon-style">
             <img src="../../../../assets/icons/eCard icons/Email icon dark.svg" alt="Phone Icon" (click)="openGmail()">
