--- a/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.scss
+++ b/src/app/core/components/mutiple-media-upload/mutiple-media-upload.component.scss
@@ -5,7 +5,7 @@ ion-row {
     &>ion-buttons {
       height: 100%;
 
-      &>ion-button {
+      &> {
         --padding-start: 0;
         --padding-end: 0;
         --padding-top: 0;
