--- a/src/app/pages/sidemenu/e-card/edit-e-card/edit-e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/edit-e-card/edit-e-card.page.html
@@ -13,7 +13,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true"*ngIf="loaded">
+<ion-content [fullscreen]="true" *ngIf="loaded">
   <ion-header collapse="condense">
     <ion-toolbar>
       <ion-title size="large">Edit eCard</ion-title>
@@ -39,61 +39,64 @@
                   <ion-label>Name</ion-label>
                 </ion-col>
                 <ion-col size="8.5" class="table-cell">
-                  <ion-input [(ngModel)]="eCard.Name" id="nameInput"></ion-input>
+                  <ion-input [(ngModel)]="eCard.Name" id="nameInput" maxlength="15" (ngModelChange)="onPrimaryFieldChange()"></ion-input>
                 </ion-col>
               </ion-row>
-  
+              
               <ion-row class="table-row">
                 <ion-col size="3.5" class="table-cell">
                   <ion-label>Email</ion-label>
                 </ion-col>
                 <ion-col size="8.5" class="table-cell">
-                  <ion-input [(ngModel)]="eCard.Email" id="emailInput"></ion-input>
+                  <ion-input [(ngModel)]="eCard.Email" id="emailInput" maxlength="50" (ngModelChange)="onPrimaryFieldChange()"></ion-input>
                 </ion-col>
               </ion-row>
-  
+              
               <ion-row class="table-row">
                 <ion-col size="3.5" class="table-cell">
                   <ion-label>Phone No.</ion-label>
                 </ion-col>
                 <ion-col size="8.5" class="table-cell">
-                  <ion-input [(ngModel)]="eCard.PhoneNumber" id="phoneInput"></ion-input>
+                  <ion-input [(ngModel)]="eCard.PhoneNumber" id="phoneInput" maxlength="50" (ngModelChange)="onPrimaryFieldChange()"></ion-input>
                 </ion-col>
               </ion-row>
-  
+              
               <ion-row class="table-row">
                 <ion-col size="3.5" class="table-cell">
                   <ion-label>Website</ion-label>
                 </ion-col>
                 <ion-col size="8.5" class="table-cell">
-                  <ion-input [(ngModel)]="eCard.Website" id="websiteInput"></ion-input>
+                  <ion-input [(ngModel)]="eCard.Website" id="websiteInput" maxlength="50" (ngModelChange)="onPrimaryFieldChange()"></ion-input>
                 </ion-col>
               </ion-row>
-  
+              
               <!-- Dynamic Rows -->
               <ion-row class="table-row" *ngFor="let row of dynamicRows; let i = index">
                 <ion-col size="3.5" class="table-cell">
-                  <ion-textarea [(ngModel)]="row.field" id="fieldTextarea" placeholder="Field"(ngModelChange)="onInputChange(i)"></ion-textarea>
-                  
-                  <!-- <ion-input [(ngModel)]="row.field" placeholder="Field"></ion-input> -->
+                  <ion-input class="ion-field placeholder-input" [(ngModel)]="row.field" id="fieldTextarea" maxlength="15" placeholder="Field" (ngModelChange)="onInputChange(i)"></ion-input>
                 </ion-col>
                 
                 <ion-col size="8.5" class="table-cell">
-                  <ion-input [(ngModel)]="row.value" placeholder="Value" (ngModelChange)="onInputChange(i)"></ion-input>
+                  <ion-input [(ngModel)]="row.value" maxlength="50" placeholder="Value" (ngModelChange)="onInputChange(i)"></ion-input>
                   
                   <ion-button fill="clear" color="danger" class="delete-icon" *ngIf="i !== dynamicRows.length - 1" (click)="deleteDynamicRow(i)">
                     <ion-icon style="margin-right: -17px;" slot="icon-only" name="trash-outline"></ion-icon>
                   </ion-button>
                 </ion-col>
               </ion-row>
-           
+              
         </ion-grid>
       </ion-card-content>
     </ion-card>
   </div>
   
-  <div class="action-buttons" (click)="addECard()">
-    <ion-button color="primary" style="border-radius: 20px;">Save</ion-button>
+  <div class="action-buttons">
+    <ion-button 
+      color="primary" 
+      style="border-radius: 20px;" 
+      (click)="addECard()"
+      [disabled]="!hasUnsavedChanges">
+      Save
+    </ion-button>
   </div>
 </ion-content>
-
