--- a/src/app/pages/sidemenu/e-card/edit-e-card/edit-e-card.page.scss
+++ b/src/app/pages/sidemenu/e-card/edit-e-card/edit-e-card.page.scss
@@ -1,3 +1,13 @@
+// .first-row {
+//   ion-label {
+//     color: #ce4d4d; /* Color for Field in the first row */
+//   }
+
+//   ion-input {
+//     color: #242323; /* Color for Value in the first row */
+//   }
+// }
+
 .edit-card-container {
   padding: 16px;
 
@@ -36,17 +46,28 @@
 
         ion-label {
           display: block;
+          color: #17138c;
+           /* Color for Field labels */
+          // font-weight: 700;
         }
 
         ion-input {
           width: 100%;
+          color: #555555; /* Color for Value fields */
+          font-weight: 700;
           --padding-start: 0;
           --padding-end: 0;
           --background: transparent;
           line-height: normal; /* Ensure the line height is normal */
           padding: 0; /* Remove padding to fix alignment */
         }
-         .delete-icon {
+
+        /* Specific styling for Field column in dynamic rows */
+        .ion-field {
+          color: #17138c; /* Apply Field color */
+        }
+
+        .delete-icon {
           width: 30px;
           height: 15px;
           margin-left: 10px;
@@ -70,23 +91,21 @@ ion-content {
     }
   }
 
-  ion-input {
-    color: #707070;
+  .placeholder-input {
+    color: #17138c; /* Apply the same color as the labels */
     font-weight: 700;
-    padding: 0; /* Remove padding from inputs */
-    line-height: normal; /* Keep the line height normal to avoid misalignment */
+    ::placeholder {
+      color: #bb5668; /* Set the same color for the placeholder text */
+      font-style: normal; /* Ensure it has the same font style as regular text */
+    }
   }
 
   ion-label {
-    color: #285078;
-  }
-  ion-textarea{
-    margin-top: 20px;
-    color: #285078;
-    margin-left: -7px;
-    
+    color: #17138c; /* Apply the same color as the labels */
+    font-weight: 700;
   }
 }
+
 .confirm-dialog {
   .dialog-box {
     background: #ffffff;
@@ -128,23 +147,25 @@ ion-content {
         --background: #e74c3c;
         --color: white;
       }
+      
       ion-icon {
         margin-inline: 0;
         transform: scale(0.8);
       }
-.backbutton{
-  ion-button {
-    --background: none;
-    --color: var(--ion-color-primary);
-    --padding-start: 0;
-    --padding-end: 0;
-  }
-  
-}
+      
       &:last-child {
         --background: #3498db;
         --color: white;
       }
     }
+  }
+}
+
+.backbutton {
+  ion-button {
+    --background: none;
+    --color: var(--ion-color-primary);
+    --padding-start: 0;
+    --padding-end: 0;
   }
 }
