--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.html
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.html
@@ -4,27 +4,56 @@
     <ion-slide *ngFor="let image of imageUri; let i = index">
       <div class="image-container" #imageContainer>
         <img 
+          *ngIf="image['mediaType'] !== 'V'"
           [src]="image.filePath"
           class="movable-image"
-          #imageElement
-          (load)="calculatePixelToScreen(imageElement)"
+          #mediaElement
+          (load)="calculatePixelToScreen(mediaElement)"
           (mousedown)="onTouchImageStart($event)"
           (mousemove)="onTouchImageMove($event)"
           (mouseup)="onTouchImageEnd($event)"
           (touchstart)="onTouchImageStart($event)"
           (touchmove)="onTouchImageMove($event)"
           (touchend)="onTouchImageEnd($event)"
-          (wheel)="onMouseWheel($event)"
         />
+
+       
+          <video 
+          #mediaElement
+          (canplay)="calculatePixelToScreen(mediaElement)"
+          (mousedown)="onTouchImageStart($event)"
+          (mousemove)="onTouchImageMove($event)"
+          (mouseup)="onTouchImageEnd($event)"
+          (touchstart)="onTouchImageStart($event)"
+          (touchmove)="onTouchImageMove($event)"
+          (touchend)="onTouchImageEnd($event)"
+          *ngIf="image['mediaType'] === 'V' " 
+          class="movable-image"
+          >
+            <source [src]="image.filePath" type="video/mp4">
+          </video>
       </div>
     </ion-slide>
   </ion-slides>
 </div>
 
 <div class="resizable-handle" 
-     (mousedown)="onMouseDown($event, imageElement.nativeElement, imageContainer.nativeElement)"
-     (touchstart)="onMouseDown($event, imageElement.nativeElement, imageContainer.nativeElement)">
+     (mousedown)="onMouseDown($event)"
+     (touchstart)="onMouseDown($event)">
 </div>
+
+<!-- <div class="controls">
+  <ion-button (click)="togglePlayPause()">{{ isPlaying ? 'Pause' : 'Play' }}</ion-button>
+  <ion-range min="0" max="100" [(ngModel)]="seekValue" (ionChange)="seekVideo($event)">
+    <ion-icon slot="start" name="play-back-outline"></ion-icon>
+    <ion-icon slot="end" name="play-forward-outline"></ion-icon>
+  </ion-range>
+  <ion-button (click)="toggleMute()">{{ isMuted ? 'Unmute' : 'Mute' }}</ion-button>
+  <ion-range min="0" max="1" step="0.1" [(ngModel)]="volumeValue" (ionChange)="changeVolume($event)">
+    <ion-icon slot="start" name="volume-mute-outline"></ion-icon>
+    <ion-icon slot="end" name="volume-high-outline"></ion-icon>
+  </ion-range>
+</div> -->
 
 <div>
   <button (click)="OnZoom(true)">zoom in</button>
