--- a/src/app/pages/sidemenu/e-card/edit-e-card/edit-e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/edit-e-card/edit-e-card.page.html
@@ -66,7 +66,7 @@
                 <ion-col size="8.5" class="table-cell">
                   <ion-input [(ngModel)]="row.value" maxlength="50" placeholder="Value" (ngModelChange)="onInputChange(i)"></ion-input>
                   
-                  <ion-button fill="clear" color="danger" class="delete-icon" *ngIf="i !== dynamicRows.length - 1" (click)="deleteDynamicRow(i)">
+                  <ion-button fill="clear" color="danger" class="delete-icon" *ngIf="i + 4 !== dynamicRows.length - 1" (click)="deleteDynamicRow(i)">
                     <ion-icon style="margin-right: -17px;" slot="icon-only" name="trash-outline"></ion-icon>
                   </ion-button>
                 </ion-col>
