--- a/src/app/pages/sidemenu/e-card/e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/e-card.page.html
@@ -19,11 +19,11 @@
     <ion-card>
       <ion-card-header>
         <ion-avatar>
-          <div>
+        
             <!-- <img [src]="userProfile.user.ProfileImage" onError="this.src='assets/icons/business/anonymous.svg'" /> -->
             <img src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}"style="width: 100%; height:100%; object-fit: cover;"
             onError="this.src='assets/icons/business/anonymous.svg'" onError="this.src='assets/icons/business/anonymous.svg'" />
-          </div>
+          
         </ion-avatar>
         
         <ion-thumbnail *ngIf="scanString">
@@ -38,6 +38,7 @@
         <h1>{{eCard.Name}}</h1>
         <h2 style="font-weight: bold; margin: -7px; margin-right: 1px;">{{userCanvasProfile.canvasProfile.UserName}}</h2>
         <!-- <h3>{{userProfile.user.DisplayName}}</h3>
+        <h5>{{userProfile.user.About}}</h5> -->
       </ion-card-content>
     </ion-card>
     <ion-icons style="border: 2px #03A9F5;">
